--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>JSR Portal - SG Misburg</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -10,16 +10,13 @@
 <body>
 
 <header>
-    <h1>Jung-Schiedsrichter Portal</h1>
+    <h1>JSR Portal - SG Misburg</h1>
 </header>
 
 <div id="loginSection">
     <div class="card login-card">
         <h2>Interner Login</h2>
-        <p>Bitte gib das Passwort ein:</p>
-        <div class="input-group">
-            <input type="password" id="pwInput" placeholder="Passwort...">
-        </div>
+        <input type="password" id="pwInput" placeholder="Passwort...">
         <button onclick="handleLogin()" class="full-btn">Anmelden</button>
         <p id="errorMsg" class="error-msg"></p>
     </div>
@@ -27,19 +24,21 @@
 
 <div id="mainContent" style="display:none;">
     <div class="user-bar">
-        <span id="userStatus">Lade Status...</span>
-        <button onclick="location.reload()" class="logout-btn">Abmelden</button>
+        <span id="userStatus">Berechtigung wird geprüft...</span>
+        <button onclick="location.reload()" class="logout-btn">Logout</button>
     </div>
 
-    <div class="card">
-        <h3>Dashboard</h3>
+    <div class="card" id="dashCard">
         <div id="dashboard"></div>
     </div>
 
     <div class="card">
-        <h3>Aktueller Spielplan</h3>
+        <div class="table-header">
+            <h3>⚽ Einzelspiele</h3>
+            <button class="admin-only add-small-btn" onclick="addEntry('spiele')">+ Spiel</button>
+        </div>
         <div class="table-container">
-            <table id="mainTable">
+            <table id="spieleTable">
                 <thead>
                     <tr>
                         <th>Datum</th>
@@ -47,21 +46,41 @@
                         <th>Halle</th>
                         <th>Klasse</th>
                         <th>Heim - Gast</th>
-                        <th>JSR 1</th>
-                        <th>JSR 2</th>
-                        <th>JSR 3</th>
+                        <th>JSRs</th>
                         <th>Status</th>
-                        <th class="admin-only" style="display:none;">Aktion</th>
+                        <th class="admin-only">Aktion</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
-        <button class="admin-only full-btn" id="addGameBtn" onclick="addGame()" style="display:none; margin-top:15px; background:#0033a0;">+ Neues Spiel hinzufügen</button>
     </div>
 
     <div class="card">
-        <button class="export-btn" onclick="exportPDF()">Als PDF speichern</button>
+        <div class="table-header">
+            <h3>🏆 Turniere</h3>
+            <button class="admin-only add-small-btn" onclick="addEntry('turniere')">+ Turnier</button>
+        </div>
+        <div class="table-container">
+            <table id="turnierTable">
+                <thead>
+                    <tr>
+                        <th>Datum</th>
+                        <th>Von-Bis</th>
+                        <th>Halle</th>
+                        <th>Turnier-Name</th>
+                        <th>Eingeteilte JSR</th>
+                        <th>Status</th>
+                        <th class="admin-only">Aktion</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="card">
+        <button class="export-btn full-btn" onclick="exportPDF()">Als PDF speichern</button>
     </div>
 </div>
 
