--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JSR Portal - SG Misburg</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
@@ -24,12 +25,19 @@
 
 <div id="mainContent" style="display:none;">
     <div class="user-bar">
-        <span id="userStatus">Status wird geprüft...</span>
+        <span id="userStatus">Status...</span>
         <button onclick="location.reload()" class="logout-btn">Logout</button>
     </div>
 
     <div class="card no-border">
         <div id="dashboard" class="dashboard-grid"></div>
+    </div>
+
+    <div class="card chart-card">
+        <h3>📊 Einsätze pro Schiedsrichter</h3>
+        <div class="chart-container">
+            <canvas id="statsChart"></canvas>
+        </div>
     </div>
 
     <div class="card">
@@ -46,7 +54,9 @@
                         <th>Halle</th>
                         <th>Klasse</th>
                         <th>Heim - Gast</th>
-                        <th>JSRs</th>
+                        <th>Schiri 1</th>
+                        <th>Schiri 2</th>
+                        <th>Bemerkung</th>
                         <th>Status</th>
                         <th class="admin-only">Aktion</th>
                     </tr>
@@ -69,7 +79,10 @@
                         <th>Von-Bis</th>
                         <th>Halle</th>
                         <th>Turnier-Name</th>
-                        <th>JSRs</th>
+                        <th>Schiri 1</th>
+                        <th>Schiri 2</th>
+                        <th>Schiri 3</th>
+                        <th>Bemerkung</th>
                         <th>Status</th>
                         <th class="admin-only">Aktion</th>
                     </tr>
