--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <table id="spieleTable">
                 <thead>
                     <tr>
-                        <th>Datum</th><th>Zeit</th><th>Halle</th><th>Klasse</th><th>Heim - Gast</th>
-                        <th>JSR 1</th><th>JSR 2</th><th>Bemerkung</th><th>Status</th>
+                        <th>Datum</th><th>Zeit</th><th>Halle</th><th>Klasse</th>
+                        <th>JSR 1</th><th>JSR 2</th><th>Bemerkung</th><th class="status-col">Status</th>
                         <th class="admin-only" style="display:none;">X</th>
                     </tr>
                 </thead>
@@ -77,7 +77,7 @@
                 <thead>
                     <tr>
                         <th>Datum</th><th>Von-Bis</th><th>Halle</th><th>Turnier-Name</th>
-                        <th>JSR 1</th><th>JSR 2</th><th>JSR 3</th><th>Bemerkung</th><th>Status</th>
+                        <th>JSR 1</th><th>JSR 2</th><th>JSR 3</th><th>Bemerkung</th><th class="status-col">Status</th>
                         <th class="admin-only" style="display:none;">X</th>
                     </tr>
                 </thead>
