--- a/index.html
+++ b/index.html
@@ -26,64 +26,58 @@
 
 <div id="mainContent" style="display:none;">
     <div class="user-bar">
-        <span id="userStatus" style="font-weight: bold; color: #2d3748;">Status...</span>
-        <button onclick="location.reload()" class="logout-btn">
-            <span>Abmelden</span> 🚪
-        </button>
+        <span id="userStatus">Status...</span>
+        <button onclick="location.reload()" class="logout-btn">Abmelden 🚪</button>
     </div>
 
     <div class="card no-border">
         <div id="dashboard" class="dashboard-grid"></div>
     </div>
 
-    <div id="adminChartSection" class="card chart-card admin-only" style="display:none;">
-        <h3>📊 Einsätze pro Schiedsrichter</h3>
-        <div class="chart-container">
-            <canvas id="statsChart"></canvas>
-        </div>
+    <div id="adminChartSection" class="card admin-only" style="display:none;">
+        <h3>📊 Statistik</h3>
+        <div class="chart-container"><canvas id="statsChart"></canvas></div>
     </div>
 
     <div class="card">
-        <h3>🗓️ Spielplan Übersicht</h3>
+        <h3>🗓️ Spielplan Kalender</h3>
         <div id="calendar"></div>
     </div>
 
-    <div class="card">
-        <div class="table-header">
+    <div class="section-container">
+        <div class="table-header-flex">
             <h3>⚽ Einzelspiele</h3>
-            <button class="admin-only add-small-btn" onclick="addEntry('spiele')" style="display:none;">+ Spiel</button>
+            <button class="admin-only add-btn" onclick="addEntry('spiele')" style="display:none;">+ Spiel hinzufügen</button>
         </div>
-        <div class="table-container">
+        <div class="desktop-view table-container">
             <table id="spieleTable">
                 <thead>
                     <tr>
-                        <th>Datum</th><th>Zeit</th><th>Halle</th><th>Klasse</th>
-                        <th>JSR 1</th><th>JSR 2</th><th>Bemerkung</th><th class="status-col">Status</th>
-                        <th class="admin-only" style="display:none;">X</th>
+                        <th>Datum</th><th>Zeit</th><th>Halle</th><th>Klasse</th><th>JSR 1</th><th>JSR 2</th><th>Bemerkung</th><th class="status-col">Status</th><th class="admin-only">X</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
+        <div id="spieleMobile" class="mobile-view"></div>
     </div>
 
-    <div class="card">
-        <div class="table-header">
+    <div class="section-container">
+        <div class="table-header-flex">
             <h3>🏆 Turniere</h3>
-            <button class="admin-only add-small-btn" onclick="addEntry('turniere')" style="display:none;">+ Turnier</button>
+            <button class="admin-only add-btn" onclick="addEntry('turniere')" style="display:none;">+ Turnier hinzufügen</button>
         </div>
-        <div class="table-container">
+        <div class="desktop-view table-container">
             <table id="turnierTable">
                 <thead>
                     <tr>
-                        <th>Datum</th><th>Von-Bis</th><th>Halle</th><th>Turnier-Name</th>
-                        <th>JSR 1</th><th>JSR 2</th><th>JSR 3</th><th>Bemerkung</th><th class="status-col">Status</th>
-                        <th class="admin-only" style="display:none;">X</th>
+                        <th>Datum</th><th class="time-col">Von-Bis</th><th>Halle</th><th>Turnier</th><th>JSR 1</th><th>JSR 2</th><th>JSR 3</th><th>Bemerkung</th><th class="status-col">Status</th><th class="admin-only">X</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
             </table>
         </div>
+        <div id="turniereMobile" class="mobile-view"></div>
     </div>
 
     <div class="card">
